app/assets/stylesheets/modal.css
.modal-background {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.7);
  z-index: 10;
}

.modal-child {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  width: 500px;
  border-radius: 1%;
  padding: 10px;
  padding-left: 30px;
  padding-right: 30px;
}

.project-form-inputs * {
  width: 100%;
}
.project-form-inputs label input {
  height: 25px;
  border-radius: 3%;
  border:1px solid #cccccc;
  margin-bottom: 20px;
}

input:focus {
  outline: none;
}

.project-submit-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.project-submit-container input {
  text-decoration: none;
  color: white;
  border: 0;
  background: none;
  box-shadow: none;
  width: 120px;
  height: 40px;
  margin-right: 5px;
  margin-top: 5px;
  background-color: #14aaf5;
  border-radius: 5px;
  font-size: 14px;
}

.project-submit-container input:hover {
  background-color: #3c74d7;
  cursor: pointer;
}

